src/objects/Banana_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>Measurement_used_in_mixing_herbicides__c</fullName>
        <description>What measurement do you use when mixing herbicide for use to kill weeds</description>
        <inlineHelpText>What measurement do you use when mixing herbicide for use to kill weeds</inlineHelpText>
        <label>Measurement used in mixing herbicides</label>
        <picklist>
            <picklistValues>
                <fullName>150ml in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200mls in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75mls in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not measure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_of_a_Banana_Farmer_Association__c</fullName>
        <description>Are you a member of a Banana farmer’s cooperative or association?</description>
        <inlineHelpText>Are you a member of a Banana farmer’s cooperative or association?</inlineHelpText>
        <label>Member of a Banana Farmer Association?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mgt_Biz_Actions_done_last_2_years__c</fullName>
        <description>Which of the following management and business actions have you taken in the last 2 years?</description>
        <inlineHelpText>Which of the following management and business actions have you taken in the last 2 years?</inlineHelpText>
        <label>Mgt &amp; Biz Actions done last 2 years</label>
        <picklist>
            <picklistValues>
                <fullName>Opened savings account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received a credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formed a group/ cooperative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joined a cooperative/association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grouped sale of products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grouped purchase of inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of these</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>More_than_half_of_banana_plants_in_rows__c</fullName>
        <description>Are more than half of the banana plants planted in rows</description>
        <inlineHelpText>Are more than half of the banana plants planted in rows</inlineHelpText>
        <label>More than half of banana plants in rows?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_group_association_cooperative__c</fullName>
        <description>What is the name of the group/association/cooperative</description>
        <inlineHelpText>What is the name of the group/association/cooperative</inlineHelpText>
        <label>Name of group/association/cooperative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_times_pesticide_use_last_12_months__c</fullName>
        <description>In the last 12 months, how many times did you use pesticides on your Banana garden[s]?</description>
        <inlineHelpText>In the last 12 months, how many times did you use pesticides on your Banana garden[s]?</inlineHelpText>
        <label>No of times pesticide use last 12 months</label>
        <picklist>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 times</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Banana_Acres__c</fullName>
        <description>how many acres of Banana does your household operate/manage (include all banana gardens or plots mentioned above).</description>
        <inlineHelpText>how many acres of Banana does your household operate/manage (include all banana gardens or plots mentioned above).</inlineHelpText>
        <label>Number of Banana Acres</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 acre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 11 acres</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Banana_gardens_managed__c</fullName>
        <description>How many Banana gardens or plots does your house hold or manage directly (probe for owned banana gardens)</description>
        <inlineHelpText>How many Banana gardens or plots does your house hold or manage directly (probe for owned banana gardens)</inlineHelpText>
        <label>Number of Banana gardens managed</label>
        <picklist>
            <picklistValues>
                <fullName>1 garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 gardens</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_suckers_plants_left_per_mat__c</fullName>
        <description>How many suckers/plants do you leave per banana mat/plant</description>
        <inlineHelpText>How many suckers/plants do you leave per banana mat/plant</inlineHelpText>
        <label>Number of suckers/plants left per mat</label>
        <picklist>
            <picklistValues>
                <fullName>Two suckers and a mature plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three suckers and a mature plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Four suckers and a mature plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_on_which_to_receive_SMS_alerts__c</fullName>
        <label>Number on which to receive SMS alerts</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_giving_free_agrochemicals__c</fullName>
        <description>If given for free, from who or which organisation</description>
        <inlineHelpText>If given for free, from who or which organisation</inlineHelpText>
        <label>Organisation giving free agrochemicals</label>
        <picklist>
            <picklistValues>
                <fullName>From NGOs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmer group or association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government agencies (NAADs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fellow farmers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organisations_giving_chemicals_on_credit__c</fullName>
        <description>If got on credit, from who or which organsation</description>
        <inlineHelpText>If got on credit, from who or which organsation</inlineHelpText>
        <label>Organisations giving chemicals on credit</label>
        <picklist>
            <picklistValues>
                <fullName>Contract farming (for a banana company)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agro-input dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana cooperative/association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Village saving and Loan Association (VSLA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SACCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_preferred_Info_Media__c</fullName>
        <description>Apart from SMS and information from CKWs, what other form would you like to receive the information on Banana production and marketing</description>
        <inlineHelpText>Apart from SMS and information from CKWs, what other form would you like to receive the information on Banana production and marketing</inlineHelpText>
        <label>Other preferred Info Media</label>
        <picklist>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochures/leaflets/posters in English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochures or leaflets/posters in Local languages</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Bananas_Planted_In_Rows__c</fullName>
        <label>% of Bananas Planted In Rows</label>
        <picklist>
            <picklistValues>
                <fullName>100 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-80 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-50 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 10 percent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Produced_Banana_Sold__c</fullName>
        <label>% of Produced Banana Sold</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 10 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-50 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 – 80 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planted_new_plantation_in_last_6_months__c</fullName>
        <description>In the last 6 months, have you planted any new banana plantation on any of your farm?</description>
        <inlineHelpText>In the last 6 months, have you planted any new banana plantation on any of your farm?</inlineHelpText>
        <label>Planted new plantation in last 6 months?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Production_Marketing_Info__c</fullName>
        <description>What kind of information would like to receive on Banana production and marketing</description>
        <inlineHelpText>What kind of information would like to receive on Banana production and marketing</inlineHelpText>
        <label>Preferred Production &amp; Marketing Info</label>
        <picklist>
            <picklistValues>
                <fullName>Soil and water conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manure or fertilizer application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compost making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water harvesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pruning, de-suckering, de-leafing etc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercropping or cover cropping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pest and diseases control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvesting and Post harvest handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulking and marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm business planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market information (prices and buyers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weather information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farming as a business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Purchased_Banana_Suckers_last_12_Months__c</fullName>
        <description>In the last 12 months have you purchased any banana suckers (banana planting material)</description>
        <inlineHelpText>In the last 12 months have you purchased any banana suckers (banana planting material)</inlineHelpText>
        <label>Purchased Banana Suckers last 12 Months</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity_of_Fertilizer_Applied_per_Plant__c</fullName>
        <inlineHelpText>How much fertilizer do you apply per banana mat or &quot;plant&quot;</inlineHelpText>
        <label>Quantity of Fertilizer Applied per Plant</label>
        <picklist>
            <picklistValues>
                <fullName>50-60 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 200 grams</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity_of_Manure_applied_per_plant__c</fullName>
        <inlineHelpText>How much manure do you apply per banana mat or &quot;plant&quot;</inlineHelpText>
        <label>Quantity of Manure applied per plant</label>
        <picklist>
            <picklistValues>
                <fullName>One basin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two basins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three basins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 basins</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_insufficient_fertiliser_use__c</fullName>
        <inlineHelpText>Why were you not able to use a sufficient amount of fertilizer on your banana plantation?</inlineHelpText>
        <label>Reason for insufficient fertiliser use</label>
        <picklist>
            <picklistValues>
                <fullName>Did not know how much to apply at the time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could not afford more/insufficient funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient labour to apply the necessary amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fertilizer destroyed/lost before application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required amount not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_insufficient_herbicide_use__c</fullName>
        <description>Why were you not able to use a sufficient amount of herbicide?</description>
        <inlineHelpText>Why were you not able to use a sufficient amount of herbicide?</inlineHelpText>
        <label>Reason for insufficient herbicide use</label>
        <picklist>
            <picklistValues>
                <fullName>Did not know how much to apply at the time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could not afford more/insufficient funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient labour to apply the necessary amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required amount not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_insufficient_use_of_chemicals__c</fullName>
        <description>Why were you not able to use a sufficient amount of chemicals (pesticides/fungicides)?</description>
        <inlineHelpText>Why were you not able to use a sufficient amount of chemicals (pesticides/fungicides)?</inlineHelpText>
        <label>Reason for insufficient use of chemicals</label>
        <picklist>
            <picklistValues>
                <fullName>Did not know how much to apply at the time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could not afford more/insufficient funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient labour to apply the necessary amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required amount not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_non_application_of_fertilizer__c</fullName>
        <inlineHelpText>Why have you not applied fertilizer or manure on your banana plantation?</inlineHelpText>
        <label>Reason for non application of fertilizer</label>
        <picklist>
            <picklistValues>
                <fullName>Do not know how to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot afford to/insufficient funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient labour to apply  it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fertilizer or manure not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fertilizer not available when needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_non_use_of_group_production__c</fullName>
        <description>Why are you not engaged in group production and marketing of Banana</description>
        <inlineHelpText>Why are you not engaged in group production and marketing of Banana</inlineHelpText>
        <label>Reason for non-use of group production</label>
        <picklist>
            <picklistValues>
                <fullName>Lack of information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No serious groups willing to engage in this</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fear to be cheated in a group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takes time to receive money from Banana sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groups not sustainable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sells_Bananas_To__c</fullName>
        <label>Sells Bananas To</label>
        <picklist>
            <picklistValues>
                <fullName>Traders at home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traders in the market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fellow farmers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Soil_Water_Conservation_Measures_Done__c</fullName>
        <description>Which of the following soil and water conservation measures do you practice on your banana garden</description>
        <inlineHelpText>Which of the following soil and water conservation measures do you practice on your banana garden</inlineHelpText>
        <label>Soil &amp; Water Conservation Measures Done</label>
        <picklist>
            <picklistValues>
                <fullName>Digging trenches or terraces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant grass across the slope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant shade trees or wind breakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sources_of_Information_on_Banana_Farming__c</fullName>
        <description>Where do you or anyone in your household generally get information about Banana farming related matters, such as good practices and market information?</description>
        <inlineHelpText>Where do you or anyone in your household generally get information about Banana farming related matters, such as good practices and market information?</inlineHelpText>
        <label>Sources of Information on Banana Farming</label>
        <picklist>
            <picklistValues>
                <fullName>CKWs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grameen Foundation Farmer Call center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspapers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS subscription service/mobile phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends, Family, Relatives, Neighbors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyers/Traders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ag Extension Agents (NAADs, NARO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmer Group/Cooperative/association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Spacing_Used_while_planting_Bananas__c</fullName>
        <description>What was the spacing used while planting your banana plantion</description>
        <inlineHelpText>What was the spacing used while planting your banana plantion</inlineHelpText>
        <label>Spacing Used while planting Bananas</label>
        <picklist>
            <picklistValues>
                <fullName>3m by 3m (10ft by 10ft)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2m by 2m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know/can&apos;t recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_of_season_to_apply_fertilizer_manur__c</fullName>
        <inlineHelpText>At what time of the season do you normally apply the fertilizers or manure</inlineHelpText>
        <label>Time of season to apply fertilizer/manur</label>
        <picklist>
            <picklistValues>
                <fullName>At the beginning of rains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Rain season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Later in the season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_3_cashcrops_for_HH_other_than_banana__c</fullName>
        <description>What are the top 3 cash crops that your household earn income from other than Banana?</description>
        <inlineHelpText>What are the top 3 cash crops that your household earn income from other than Banana?</inlineHelpText>
        <label>Top 3 cashcrops for HH other than banana</label>
        <picklist>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cassava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetables (tomato, cabage etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fruits (passion fruits, mango, citrus etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Top_3_income_generating_livestock__c</fullName>
        <description>What are the top 3 livestock that your household earn income from?</description>
        <inlineHelpText>What are the top 3 livestock that your household earn income from?</inlineHelpText>
        <label>Top 3 income generating livestock</label>
        <picklist>
            <picklistValues>
                <fullName>Cattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poutlry (chicken, ducks, turkeys etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish farming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_amount_in_UGX_spent_on_chemicals__c</fullName>
        <description>In the last 12 months, what was the total amount you spent in Ugandan shillings for the chemicals (pesticides/fungicides) used on your Banana garden[s]?</description>
        <inlineHelpText>In the last 12 months, what was the total amount you spent in Ugandan shillings for the chemicals (pesticides/fungicides) used on your Banana garden[s]?</inlineHelpText>
        <label>Total amount in UGX spent on chemicals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Bananas_Mostly_Grown__c</fullName>
        <description>What type of bananas do you mostly grow</description>
        <inlineHelpText>What type of bananas do you mostly grow</inlineHelpText>
        <label>Type of Bananas Mostly Grown</label>
        <picklist>
            <picklistValues>
                <fullName>Cooking type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brewing type (mbidde)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desert type (gonja)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Fertilizer_Manure_Used__c</fullName>
        <description>Which type of fertilizer or manure did you use on your banana plantation?</description>
        <inlineHelpText>Which type of fertilizer or manure did you use on your banana plantation?</inlineHelpText>
        <label>Type of Fertilizer/Manure Used</label>
        <picklist>
            <picklistValues>
                <fullName>Manure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inorganic/chemical fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both manure and inorganic/chemical fertilizer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_leaves_removed_when_deleafing__c</fullName>
        <description>When reducing the number of leaves (de-leafing), what kind of leaves do you remove</description>
        <inlineHelpText>When reducing the number of leaves (de-leafing), what kind of leaves do you remove</inlineHelpText>
        <label>Type of leaves removed when deleafing</label>
        <picklist>
            <picklistValues>
                <fullName>Old leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead or dry leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaves turning yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any excess leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>